@@ -12,16 +12,14 @@
 	FRAME_WIDTH frame width
 	FRAME_HEIGHT frame height
 	*/
-Entity::Entity(int x, int y, Graphics* graphics, Texture* texture, int const* FRAME_COUNT, int const* FRAME_WIDTH, int const* FRAME_HEIGHT)
+Entity::Entity(int x, int y, Graphics* graphics, Texture* texture, int const* FRAME_COUNT, int const* FRAME_WIDTH, int const* FRAME_HEIGHT, World* world) : Renderable(x, y, graphics)
 {
-	this->x = x;
-	this->y = y;
-	this->graphics = graphics;
 	this->texture = texture;
 	currentFrame = 0;
 	this->FRAME_COUNT = FRAME_COUNT;
 	this->FRAME_WIDTH = FRAME_WIDTH;
 	this->FRAME_HEIGHT = FRAME_HEIGHT;
+	this->world = world;
 }
 
 //Destructor
@@ -32,10 +30,22 @@ Entity::~Entity()
 //render function for Entity
 void Entity::render()
 {
+	//Dummy
 	int frameCount = *FRAME_COUNT;
 	if (currentFrame >= frameCount) {
 		currentFrame = 0;
 	}
 	graphics->drawFrameTexture(texture, x, y, currentFrame, 0, FRAME_WIDTH, FRAME_HEIGHT, true);
 	currentFrame++;
+}
+
+//Calc Frame if animation wanted
+void Entity::calcFrame(int framerate)
+{
+
+}
+
+void Entity::proceed(int framerate)
+{
+
 }
