@@ -1,14 +1,13 @@
 //This class handels enumerations for Textures
 #pragma once
 
-class TexturesEnumeration
+namespace TexturesEnumeration
 {
-public:
 	typedef enum TEXTURES_NAME
 	{
 		TEXTURE_EMPTY=0,
 		TEXTURE_EARTH,
-		TEXTURE_2,
+		TEXTURE_TREE,
 		TEXTURES_COUNT
 	};
 };
