@@ -1,0 +1,17 @@
+#include "World.h"
+
+
+World::World()
+{
+}
+
+
+World::~World()
+{
+}
+
+//Returns the current season
+WorldEnumeration::WORLD_SEASONS World::getCurrentSeason()
+{
+	return currentSeason;
+}
