@@ -1,0 +1,14 @@
+//This namespace handels enumerations for the Map
+#pragma once
+
+namespace WorldEnumeration
+{
+	typedef enum WORLD_SEASONS
+	{
+		WORLD_SEASON_SPRING = 0,
+		WORLD_SEASON_SUMMER,
+		WORLD_SEASON_AUTUMN,
+		WORLD_SEASON_WINTER
+	};
+
+};
